--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body{
 	margin:0;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: Vazir;
 	font-size: 22px;
 	font-weight: 100;
 	line-height: 1.7em;
