--- a/css/index.css
+++ b/css/index.css
@@ -204,6 +204,7 @@ direction: rtl;
 	font-size: 12px;
 	text-align: right;
 	padding: 0.5em 1.5em;
+direction: rtl;
 }
 
 .littlefoot-footnote__content {
