--- a/sim/css/sim.css
+++ b/sim/css/sim.css
@@ -11,6 +11,9 @@ div{
 	-moz-user-select: none;     /* Firefox all */
 	-ms-user-select: none;      /* IE 10+ */
 	user-select: none;          /* Likely future */ 
+	direction:rtl;
+	text-align:right;
+	right:3px;
 }
 
 #sandbox{
@@ -106,7 +109,7 @@ div{
 	color: #bbb;
 }
 #sb_reset{
-	right: 0px;
+	right: 10px;
 }
 
 hr{
@@ -215,6 +218,8 @@ hr{
     color: #bbb;
     font-size: 14px;
     font-weight: 100;
+	right: 0px;
+	direction: ltr;
 }
 #graph > #month_ticks > div{
 	width: 100px;
