What about this?

--- a/sim/css/sim.css
+++ b/sim/css/sim.css
@@ -25,7 +25,7 @@ div{
 
 #controls{
 	position: absolute;
-	left:15px;
+	/*left:15px;*/
 	top:20px;
 	width:270px;
 	/*height:500px;*/
@@ -93,7 +93,8 @@ div{
 }
 
 #sb_reset, #sb_replay{
-	position: absolute;
+	/*position: absolute;*/
+	margin-top: 3px;
     color: #999;
     font-size: 15px;
     font-weight: 100;
@@ -122,6 +123,7 @@ hr{
 	overflow: hidden;
 	margin-bottom: 1em;
 	position: relative;
+
 	border-left: 5px solid #ffffff;
 	padding-left: 10px;
 }
@@ -316,6 +318,7 @@ icon[r]{
 	display: inline-block;
 
 	position: relative;
+	/* vertical-align: middle; */
 	top: 6px;
 }
 .control_icon[continue]{
