--- a/sim/css/sim.css
+++ b/sim/css/sim.css
@@ -1,6 +1,6 @@
 body{
 	margin: 0;
-	font-family: Vazir, Helvetica, Arial, sans-serif;
+	font-family: Vazir;
 	font-size: 15px;
 	font-weight: normal;
 	background: #ddd;
