--- a/sim/css/sim.css
+++ b/sim/css/sim.css
@@ -1,6 +1,14 @@
+@font-face {
+	font-family: 'Vazir';
+	src: url('fonts/Vazir.eot');
+	src: url('fonts/Vazir.eot?#iefix') format('embedded-opentype'), 
+		   url('fonts/Vazir.woff2') format('woff2'), 
+		   url('fonts/Vazir.woff') format('woff'), 
+		   url('fonts/Vazir.ttf')  format('truetype');
+  }
 body{
 	margin: 0;
-	font-family: Helvetica, Vazir, Arial, sans-serif;
+	font-family:  Vazir, Helvetica, Arial, sans-serif;
 	font-size: 15px;
 	font-weight: normal;
 	background: #ddd;
